Fixed rig name cutoff

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -662,7 +662,7 @@
   text-wrap: none;
   white-space: nowrap;
   display: inline-block;
-  width: 80px;
+  width: 200px;
   font-size: 12px;
   font-family: "gothammediumregular";
   text-transform: uppercase;
